--- a/src/components/TextInput/TextInput.module.css
+++ b/src/components/TextInput/TextInput.module.css
@@ -5,6 +5,7 @@
     background-color: var(--color-primary);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    z-index: 10;
 }
 
 .textareaWrapper {
@@ -39,8 +40,7 @@
     justify-content: center;
     background-color: transparent;
     transition: color var(--transition-fast);
-    flex-shrink: 0;
-    margin-bottom: 0;
+    z-index: 2;
 }
 
 .sendButtonActive {
