--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,8 @@
 .container {
     display: flex;
+    height: 100vh;
+    height: 100svh;
     height: 100dvh;
-    min-height: 100vh;
     width: 100%;
     background-color: var(--color-background);
 }
