--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,5 @@
 .container {
     display: flex;
-    height: 100vh;
-    height: 100svh;
     height: 100dvh;
     width: 100%;
     background-color: var(--color-background);
@@ -32,7 +30,7 @@
     justify-content: center;
     padding: 32px;
     text-align: center;
-    background-color: #DAE5F5;
+    background-color: var(--color-background);
     position: relative;
 }
 
@@ -75,7 +73,7 @@
     height: 16px;
 }
 
-/* Mobile: show either the sidebar OR notes area (per Figma) */
+/* Mobile: show either the sidebar OR notes area */
 @media (max-width: 768px) {
     .container {
         flex-direction: column;
