--- a/src/components/TextInput/TextInput.module.css
+++ b/src/components/TextInput/TextInput.module.css
@@ -64,9 +64,8 @@
         right: 0;
         bottom: 0;
         padding: 12px;
-        padding-bottom: calc(12px + env(safe-area-inset-bottom));
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
+        padding-bottom: calc(12px + env(safe-area-inset-bottom, 0px));
+        border-radius: 0;
     }
 
     .textarea {
